summarized the model output

--- a/index.ipynb
+++ b/index.ipynb
@@ -4268,6 +4268,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data summary shows that the 'Arrest Flag' is imbalanced, with the 'False' class (no arrest) comprising 88% and the 'True' class (arrest) only 12% of the dataset. This means that most stops do not result in an arrest."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 476,
    "metadata": {},
@@ -4387,9 +4394,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Model 1 Performance Analysis\n",
+    "#### **Model 1 Performance Analysis** ####\n",
     "\n",
-    "****a. Overall Model Accuracy****"
+    "****a. Overall Model Accuracy:****\n",
+    "Our training set score of 92.1% and test set score of 92.7% imply that our model is highly accurate. The minimal difference between the test and training scores suggest our model generalizies well ie. not overfitting or undefitting.\n",
+    "\n",
+    "****b. Classification Report:****\\\n",
+    "Precision and Recall for the False Class: \n",
+    "- Precision: 0.95\n",
+    "- Recall: 0.96\n",
+    "- F1-Score: 0.96\\\n",
+    "These scores indicate the model performs very well in predicting the majority class (False).\n",
+    "\n",
+    "Precision and Recall for the True Class:\n",
+    "- Precision: 0.69\n",
+    "- Recall: 0.61\n",
+    " - F1-Score: 0.65\\\n",
+    "This shows the model struggles to accurately predict the minority class (True), missing 39% of the actual positives.\n",
+    "\n",
+    "****c. ROC Curve:****\\\n",
+    "The ROC curve shows a high True Positive Rate (TPR) or Sensitivity against a low False Positive Rate (FPR) across the threshold range, indicating strong performance in distinguishing between the classes.The curve is close to the top-left corner, which represents excellent performance.\n",
+    "\n",
+    "****Implications of Class Imbalance:****\n",
+    "- Biased Model Predictions: The imbalance can cause our model to be biased towards predicting the majority class ('False' for no arrest) because predicting the majority class more frequently would still yield a high accuracy.\n",
+    "- Underperformance on Minority Class: As seen in the classification report, the precision and recall for the 'True' class (arrest) are significantly lower than for the 'False' class. This suggests that the model struggles to correctly identify and predict arrests, which is the minority class."
    ]
   },
   {
