--- a/index.ipynb
+++ b/index.ipynb
@@ -4333,9 +4333,6 @@
    "source": [
     "from sklearn.metrics import roc_curve, auc\n",
     "\n",
-    "# Scikit-learn's built in roc_curve method returns the fpr, tpr, and thresholds\n",
-    "# for various decision boundaries given the case member probabilites\n",
-    "\n",
     "# First calculate the probability scores of each of the datapoints:\n",
     "y_score = logreg.fit(X_train, y_train).decision_function(X_test)\n",
     "\n",
@@ -4370,7 +4367,7 @@
     "import seaborn as sns\n",
     "%matplotlib inline\n",
     "\n",
-    "# Seaborn's beautiful styling\n",
+    "\n",
     "sns.set_style('darkgrid', {'axes.facecolor': '0.9'})\n",
     "\n",
     "print('AUC: {}'.format(auc(fpr, tpr)))\n",
@@ -4480,7 +4477,7 @@
     "\n",
     "# Now let's compare a few different ratios of minority class to majority class\n",
     "ratios = [0.25, 0.5, 0.75, 1.0]\n",
-    "names = ['0.25', '0.5', '0.75', '1.0']  # Ensure the length of 'names' matches 'ratios'\n",
+    "names = ['0.25', '0.5', '0.75', '1.0'] \n",
     "colors = sns.color_palette('Set2')\n",
     "\n",
     "plt.figure(figsize=(10, 8))\n",
@@ -4524,57 +4521,136 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 522,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>#sk-container-id-13 {color: black;}#sk-container-id-13 pre{padding: 0;}#sk-container-id-13 div.sk-toggleable {background-color: white;}#sk-container-id-13 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-13 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-13 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-13 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-13 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-13 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-13 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-13 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-13 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-13 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-13 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-13 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-13 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-13 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-13 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-13 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-13 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-13 div.sk-item {position: relative;z-index: 1;}#sk-container-id-13 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-13 div.sk-item::before, #sk-container-id-13 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-13 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-13 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-13 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-13 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-13 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-13 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-13 div.sk-label-container {text-align: center;}#sk-container-id-13 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-13 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-13\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>DecisionTreeClassifier(criterion=&#x27;entropy&#x27;)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-13\" type=\"checkbox\" checked><label for=\"sk-estimator-id-13\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">DecisionTreeClassifier</label><div class=\"sk-toggleable__content\"><pre>DecisionTreeClassifier(criterion=&#x27;entropy&#x27;)</pre></div></div></div></div></div>"
-      ],
-      "text/plain": [
-       "DecisionTreeClassifier(criterion='entropy')"
-      ]
-     },
-     "execution_count": 522,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# Create the classifier, fit it on the training data and make predictions on the test set\n",
-    "from sklearn import tree\n",
-    "clf = DecisionTreeClassifier(criterion='entropy')\n",
-    "\n",
-    "clf.fit(X_train, y_train)"
+    "Let us also generate a classification report to our model performance"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 523,
+   "execution_count": 548,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy:  0.9169643508055697\n"
+      "Model accuracy score: 0.8964\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       1.00      0.89      0.94     24185\n",
+      "        True       0.53      0.97      0.69      3249\n",
+      "\n",
+      "    accuracy                           0.90     27434\n",
+      "   macro avg       0.77      0.93      0.81     27434\n",
+      "weighted avg       0.94      0.90      0.91     27434\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "y_preds = clf.predict(X_test)\n",
+    "# Fit a model using the highest SMOTE ratio\n",
+    "smote = SMOTE(sampling_strategy=1.0)\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
+    "logreg = LogisticRegression(fit_intercept=False, C=100, solver='lbfgs', max_iter = 100_000)\n",
+    "model_log = logreg.fit(X_train_resampled, y_train_resampled)\n",
     "\n",
-    "print('Accuracy: ', accuracy_score(y_test, y_preds))"
+    "# Predict on the test set\n",
+    "y_hat_test = logreg.predict(X_test)\n",
+    "y_score = logreg.decision_function(X_test)\n",
+    "\n",
+    "print('Model accuracy score: {0:0.4f}'. format(accuracy_score(y_test, y_hat_test)))\n",
+    "print(classification_report(y_test,y_hat_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "****Before SMOTE:****\n",
+    " - Accuracy: 0.9213\n",
+    " - Precision (True): 0.69\n",
+    " - Recall (True): 0.61\n",
+    " - F1-score (True): 0.65\n",
+    "\n",
+    "****After SMOTE:****\n",
+    " - Accuracy: 0.9169\n",
+    " - Precision (True): 0.53\n",
+    " - Recall (True): 0.97\n",
+    " - F1-score (True): 0.69\n",
+    "\n",
+    "While our model's recall has improved greatly, meaning we are able to predict true postives(actual arrests) significantly better based on an improvement from 0.61 to 0.97, our precision has suffered as is evident from the drop from 0.69 to 0.53.\n",
+    "Let's try a different SMOTE ratio to see if we can limit the impact on precision i.e. reduce the amount of false positives (or incorrectly predicted arrests)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 549,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model accuracy score: 0.9168\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.97      0.93      0.95     24185\n",
+      "        True       0.61      0.81      0.70      3249\n",
+      "\n",
+      "    accuracy                           0.92     27434\n",
+      "   macro avg       0.79      0.87      0.82     27434\n",
+      "weighted avg       0.93      0.92      0.92     27434\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# fir a model using the lowest SMOTE ratio\n",
+    "smote = SMOTE(sampling_strategy=0.25)\n",
+    "X_train_resampled, y_train_resampled = smote.fit_resample(X_train, y_train)\n",
+    "logreg = LogisticRegression(fit_intercept=False, C=100, solver='lbfgs', max_iter = 100_000)\n",
+    "model_log = logreg.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "# Predict on the test set\n",
+    "y_hat_test = logreg.predict(X_test)\n",
+    "y_score = logreg.decision_function(X_test)\n",
+    "\n",
+    "print('Model accuracy score: {0:0.4f}'. format(accuracy_score(y_test, y_hat_test)))\n",
+    "print(classification_report(y_test,y_hat_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "****Before SMOTE:****\n",
+    " - Accuracy: 0.9213\n",
+    " - Precision (True): 0.69\n",
+    " - Recall (True): 0.61\n",
+    " - F1-score (True): 0.65\n",
+    "\n",
+    "****After SMOTE:****\n",
+    " - Accuracy: 0.9169\n",
+    " - Precision (True): 0.61\n",
+    " - Recall (True): 0.81\n",
+    " - F1-score (True): 0.70\n",
+    "\n",
+    "\n",
+    "\n",
+    "****Key Observations:****\n",
+    "\n",
+    "**a. Recall for predicting arrests improved significantly from 0.61 to 0.81.**\\\n",
+    "This means the model is now much better at identifying true positives (actual arrests), which is crucial in scenarios where failing to predict an arrest correctly might have serious consequences.\n",
+    "\n",
+    "**b. Precision for the minority class dropped from 0.69 to 0.61 after SMOTE.**\\\n",
+    "This decrease implies that the model now has more false positives, i.e., it incorrectly predicts arrests more frequently. However, the decline is not material and this is a trade off we are willing to make given the improvements in predicting actual arrests.\n",
+    "\n",
+    "**c. The F1-score for predicting arrests increased from 0.65 to 0.70.**\\\n",
+    "This balanced metric of precision and recall suggests an overall improvement in predicting the minority class\n",
+    "\n",
+    "**d. The overall accuracy slightly decreased from 0.9213 to 0.9167**\\\n",
+    "This is a minor reduction and is  acceptable given the other improvements in model performance.\n",
+    "\n"
    ]
   }
  ],
