checked for most important features

--- a/index.ipynb
+++ b/index.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. Introduction"
+    "# 1. Introduction\n",
+    "\n",
+    "The Seattle Police Department (SPD) conducts Terry Stops as part of their law enforcement efforts to address public safety concerns. Terry Stops involve stopping, questioning, and sometimes frisking individuals based on reasonable suspicion of involvement in criminal activity. However, the effectiveness and fairness of these stops have been scrutinized, particularly regarding potential biases and the frequency of resulting arrests. To address these concerns, this analysis aims to build a predictive model that can estimate the likelihood of an arrest occurring during a Terry Stop. By leveraging historical data, we can identify patterns and factors that are most indicative of an arrest outcome, which can inform policy decisions and improve the fairness and efficiency of law enforcement practices."
    ]
   },
   {
@@ -13,14 +15,32 @@
    "source": [
     "# 2. Problem Statement\n",
     "\n",
-    "Arrest Flag"
+    "The goal of this analysis is to develop a predictive model using historical Terry Stops data from the Seattle Police Department to estimate the likelihood of an arrest during these stops. The primary challenge lies in accurately predicting arrests in a dataset that exhibits significant class imbalance, with most stops not resulting in an arrest. Addressing this imbalance and ensuring the model's predictions are both accurate and fair are critical to the success of this project."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Objectives"
+    "# 3. Objectives\n",
+    "\n",
+    "**Major Objective: Develop a Predictive Model for Arrests During Terry Stops**\n",
+    "\n",
+    "a. Create a logistic regression model that accurately predicts whether a Terry Stop will result in an arrest, using features derived from the dataset.\n",
+    "\n",
+    "**Minor Objectives**\n",
+    "\n",
+    "**b. Understand the Nature of the Variables:**\n",
+    "\n",
+    "Perform an exploratory data analysis (EDA) to identify the distribution, relationships, and potential issues with the variables, such as missing values, which could impact model performance.\n",
+    "\n",
+    "**c. Categorical Encoding Strategy:**\n",
+    "\n",
+    "Implement and compare different encoding techniques (one-hot encoding for low cardinality features and target encoding for high cardinality features) to effectively incorporate categorical variables into the model without inflating dimensionality unnecessarily.\n",
+    "\n",
+    "**d. Class Imbalance Management:**\n",
+    "\n",
+    "Evaluate and apply resampling techniques like SMOTE to address the class imbalance in the dataset, ensuring that the model can reliably predict both outcomes (arrests and non-arrests) without bias toward the majority class."
    ]
   },
   {
@@ -4391,7 +4411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Model 1 Performance Analysis** ####\n",
+    "#### **Model 1 Analysis** ####\n",
     "\n",
     "****a. Overall Model Accuracy:****\\\n",
     "Our training set score of 92.1% and test set score of 92.7% imply that our model is highly accurate. The minimal difference between the test and training scores suggest our model generalizies well ie. not overfitting or undefitting.\n",
@@ -4566,6 +4586,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### **Model 2 Analysis** ####\n",
+    "\n",
     "****Before SMOTE:****\n",
     " - Accuracy: 0.9213\n",
     " - Precision (True): 0.69\n",
@@ -4623,6 +4645,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### **Model 3 Analysis** ####\n",
+    "\n",
     "****Before SMOTE:****\n",
     " - Accuracy: 0.9213\n",
     " - Precision (True): 0.69\n",
@@ -4650,7 +4674,95 @@
     "\n",
     "**d. The overall accuracy slightly decreased from 0.9213 to 0.9167**\\\n",
     "This is a minor reduction and is  acceptable given the other improvements in model performance.\n",
+    " \n",
+    "\n",
+    "Next, we will see which features are most important to our logistic regression model.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 555,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                              Feature  Coefficient\n",
+      "5                                         Weapon Type    26.188617\n",
+      "3                                       Officer Squad    13.939047\n",
+      "4                                                Beat    13.417783\n",
+      "6                                              Sector   -10.950601\n",
+      "15                      Stop Resolution_Field Contact    -9.862063\n",
+      "13                             Stop Resolution_Arrest     9.119804\n",
+      "31                    Subject Perceived Race_Hispanic    -7.588919\n",
+      "40       Subject Perceived Gender_Unable to Determine    -7.397093\n",
+      "33  Subject Perceived Race_Native Hawaiian or Othe...     7.215141\n",
+      "16                     Stop Resolution_Offense Report    -7.117350\n",
+      "32                Subject Perceived Race_Multi-Racial    -6.439006\n",
+      "34                       Subject Perceived Race_Other    -5.573277\n",
+      "38  Subject Perceived Gender_Gender Diverse (gende...     4.784628\n",
+      "45                                  Precinct_FK ERROR     4.599885\n",
+      "19                                Officer Gender_True    -4.343032\n",
+      "43                                    Frisk Flag_True    -4.317134\n",
+      "20         Officer Race_American Indian/Alaska Native    -4.249265\n",
+      "42                                   Frisk Flag_False    -4.059431\n",
+      "18                               Officer Gender_False    -4.033533\n",
+      "0                                   Initial Call Type     3.931529\n",
+      "14              Stop Resolution_Citation / Infraction    -3.528836\n",
+      "41                   Subject Perceived Gender_Unknown    -3.507638\n",
+      "17           Stop Resolution_Referred for Prosecution     3.011881\n",
+      "44                                      Precinct_East    -2.854232\n",
+      "48                                     Precinct_South    -2.747698\n",
+      "51                                      Precinct_West    -2.735765\n",
+      "46                                     Precinct_North    -2.596996\n",
+      "49                                 Precinct_Southwest    -2.439660\n",
+      "2                                           Call Type     2.060486\n",
+      "7                            Subject Age Group_1 - 17    -2.015855\n",
+      "56                     Officer Age Group_56 and Above    -2.006511\n",
+      "53                          Officer Age Group_26 - 35    -1.628369\n",
+      "1                                     Final Call Type     1.602632\n",
+      "54                          Officer Age Group_36 - 45    -1.600624\n",
+      "52                          Officer Age Group_18 - 25    -1.587250\n",
+      "55                          Officer Age Group_46 - 55    -1.553810\n",
+      "35                     Subject Perceived Race_Unknown     1.495128\n",
+      "8                           Subject Age Group_18 - 25    -1.494771\n",
+      "47                                       Precinct_OOJ     1.476700\n",
+      "11                          Subject Age Group_46 - 55    -1.370724\n",
+      "37                    Subject Perceived Gender_Female    -1.303269\n",
+      "9                           Subject Age Group_26 - 35    -1.286419\n",
+      "12                     Subject Age Group_56 and Above    -1.173992\n",
+      "50                                   Precinct_Unknown    -1.078801\n",
+      "10                          Subject Age Group_36 - 45    -1.034802\n",
+      "39                      Subject Perceived Gender_Male    -0.953193\n",
+      "25                         Officer Race_Not Specified    -0.911863\n",
+      "24         Officer Race_Nat Hawaiian/Oth Pac Islander    -0.876180\n",
+      "27                                 Officer Race_White    -0.875888\n",
+      "29                       Subject Perceived Race_Asian     0.845231\n",
+      "30   Subject Perceived Race_Black or African American     0.822723\n",
+      "36                       Subject Perceived Race_White     0.759279\n",
+      "22             Officer Race_Black or African American    -0.610123\n",
+      "26                     Officer Race_Two or More Races    -0.467333\n",
+      "21                                 Officer Race_Asian    -0.204968\n",
+      "23                    Officer Race_Hispanic or Latino    -0.180946\n",
+      "28  Subject Perceived Race_American Indian or Alas...     0.087135\n"
+     ]
+    }
+   ],
+   "source": [
+    "feature_names = X_train.columns\n",
+    "\n",
+    "coefficients = logreg.coef_[0] \n",
+    "\n",
+    "#add feature names and coefficients to a dataframe\n",
+    "coef_df = pd.DataFrame({'Feature': feature_names, 'Coefficient': coefficients})\n",
+    "\n",
+    "# Sort features by absolute value of the coefficient\n",
+    "coef_df['Abs_Coefficient'] = coef_df['Coefficient'].abs()\n",
+    "coef_df = coef_df.sort_values(by='Abs_Coefficient', ascending=False)\n",
+    "\n",
+    "print(coef_df[['Feature', 'Coefficient']])\n"
    ]
   }
  ],
