added objectives and recommendations

--- a/index.ipynb
+++ b/index.ipynb
@@ -2968,7 +2968,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Data Preparation\n",
+    "# 5. Data Preparation\n",
     "\n",
     "We will start by splitting our data into a training and test set before proceeding to avoid any data leakage"
    ]
@@ -3517,7 +3517,7 @@
    "source": [
     "#### One Hot Encoding\n",
     "\n",
-    "Next, we will one hot encode our low cardinality features.Unlike with target encoding, one hot encoding will alter the shape of our data by creating additional columns for each unique value of our low cardinality features (and dropping the first column of each category since it does not add any new information that we cannot get by aggregating the rest of the columns for similar categories)."
+    "Next, we will one hot encode our low cardinality features. Unlike with target encoding, one hot encoding will alter the shape of our data by creating additional columns for each unique value of our low cardinality features (and dropping the first column of each category since it does not add any new information that we cannot get by aggregating the rest of the columns for similar categories)."
    ]
   },
   {
@@ -4182,7 +4182,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Modeling"
+    "# 6. Modeling"
    ]
   },
   {
@@ -4520,12 +4520,11 @@
    "source": [
     "#### **Model 1 Analysis** ####\n",
     "\n",
-    "Our model shows general improvement from our baseline model. \n",
-    "\n",
+    "**Model 1 Performance**:\n",
     "\n",
     "****a. Overall Model Accuracy:****\\\n",
     "Our training set score of 92.1% and test set score of 92.7% imply that our model is highly accurate. The minimal difference between the test and training scores suggest our model generalizies well ie. not overfitting or undefitting.\n",
-    "The logistic regression model's accuracy (92.3%) is significantly higher than the baseline (11.84%), indicating our logistic regression model performs much better at correctly classifying instances overall.\n",
+    "\n",
     "\n",
     "****b. Classification Report:****\\\n",
     "Precision and Recall for the False Class: \n",
@@ -4543,12 +4542,13 @@
     "****c. ROC Curve:****\\\n",
     "The ROC curve shows a high True Positive Rate (TPR) or Sensitivity against a low False Positive Rate (FPR) across the threshold range, indicating strong performance in distinguishing between the classes.The curve is close to the top-left corner, which represents excellent performance.\n",
     "\n",
+    "\n",
     "**Comparison vs Baseline Model:**\n",
     "\n",
     "Our model shows general improvement from our baseline model.\n",
     "\n",
     "**Accuracy:**\\\n",
-    "The logistic regression model's accuracy (92.3%) is significantly higher than the baseline (11.84%), indicating our logistic regression model performs much better at correctly classifying instances overall.\n",
+    "The logistic regression model's accuracy (92.13%) is significantly higher than the baseline (11.84%), indicating our logistic regression model performs much better at correctly classifying instances overall.\n",
     "\n",
     "**Precision:**\\\n",
     "For the baseline model, precision is 0 for the False class, as it never predicts False. For the True class, precision is 0.12, which is very low and reflects a high number of False Positives.\n",
@@ -4562,15 +4562,17 @@
     "The F1-score is low overall in our baseline model, with the False class scoring 0 and the True class at 0.21, reflecting poor precision and recall balance.\n",
     "In comparison, in our logistic regression mode, the F1-score for both classes is significantly improved (False: 0.96, True: 0.65), indicating a better balance between precision and recall.\n",
     "\n",
+    "\n",
+    "\n",
     "****Implications of Class Imbalance:****\n",
-    "- Biased Model Predictions: The imbalance can cause our model to be biased towards predicting the majority class ('False' for no arrest) because predicting the majority class more frequently would still yield a high accuracy.In law enforcement, accurately predicting the 'Arrest Flag' is crucial. Misclassifying an actual arrest situation (False Negative) could have serious implications, such as failing to appropriately flag an encounter where an arrest should occur.\n",
+    "- Biased Model Predictions: Class imbalance can cause our logistic regression model to be biased towards predicting the majority class ('False' for no arrest) because predicting the majority class more frequently would still yield a high accuracy. In law enforcement, accurately predicting the 'Arrest Flag' is crucial. Misclassifying an actual arrest situation (False Negative) could have serious implications, such as failing to appropriately flag an encounter where an arrest should occur.\n",
     "\n",
+    "- Underperformance on Minority Class: As seen in the classification report, the precision and recall for the 'True' class (arrest) are significantly lower than for the 'False' class. This suggests that the model struggles to correctly identify and predict arrests, which is the minority class. Overpredicting 'False' (no arrest) could lead to missed opportunities for police intervention, which might not align with the goals of public safety and proper law enforcement.\n",
     "\n",
-    "- Underperformance on Minority Class: As seen in the classification report, the precision and recall for the 'True' class (arrest) are significantly lower than for the 'False' class. This suggests that the model struggles to correctly identify and predict arrests, which is the minority class. Overpredicting 'False' (no arrest) could lead to missed opportunities for intervention, which might not align with the goals of public safety and proper law enforcement.\n",
     "\n",
     "****Using SMOTE to Address Class Imbalance****\n",
     "\n",
-    "SMOTE (Synthetic Minority Oversampling) generates new sample data using'synthetic'data from our original dataset. \n",
+    "SMOTE (Synthetic Minority Oversampling) generates new sample data using 'synthetic' data from our original dataset. \n",
     "\n"
    ]
   },
@@ -4906,14 +4908,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Conclusion"
+    "# 7. Conclusion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**a. Major Objective: Derive the most important features in predicting an arrest:**"
+    "### **a. Major Objective: Derive the most important features in predicting an arrest:**"
    ]
   },
   {
@@ -4958,7 +4960,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**b. Develop a Predictive Model for Arrests During Terry Stops**\n",
+    "### **b. Develop a Predictive Model for Arrests During Terry Stops**\n",
+    "\n",
+    "Our final model gernerally improves upon the baseline model and earlier iterations.\n",
     "\n",
     "Model Performance:\n",
     "\n",
@@ -4972,6 +4976,117 @@
     "Recall for True (Arrest): 0.81\n",
     "\n",
     "While the model has a high accuracy, this is mostly due to predicting situations where no arrest is made as signified by the high precision and recall for the False class. Its performance on predicting arrests (the minority class) reveals a trade-off: higher recall but lower precision. This means the model is good at identifying cases where an arrest is likely but might also incorrectly label some non-arrest cases as arrests. While we tried to reduce this trade-off, given the nature of the data, we cannot resolve it fully. This is an important consideration in the practical use of the model for future prediction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **c. EDA and Feature Engineering:**\n",
+    "\n",
+    "Our exploratory data analysis(EDA) highlighted some issues with missing values where some rows have blank values and others had been filled in with a placeholder value ('-').\n",
+    "\n",
+    "**Handling of missing values:**\n",
+    "\n",
+    "1. Subject Age Group  - we imputed this with mode to preserve the shape of our data.\n",
+    "\n",
+    "2. Weapon Type - Imputed with 'None\" given that a since several rows were blank, it’s possible that in many cases, no weapon was found.\n",
+    "\n",
+    "3. Officer ID - Since only 24 out of 60,962 entries are affected, we dropped these rows.\n",
+    "\n",
+    "4. Subject Perceived Race - We replaced missing values with \"Unknown\" to maintain the data structure without introducing bias.\n",
+    "\n",
+    "5. Subject Perceived Gender - We replaced missing values with \"Unknown\" to maintain the data structure without introducing bias..\n",
+    "\n",
+    "6. Initial Call Type, Final Call Type, Call Type - We imputed this with \"Unknown\" since missing call types might suggest a lack of information or a specific condition (e.g., not applicable since no call was made and the incident just transpired).\n",
+    "\n",
+    "7. Frisk Flag - We imputed missing values with the mode since the missing values are minimal.\n",
+    "\n",
+    "8. Precint, Sector, Beat - We filled missing values with \"Unknown\" allowing us to retain the rows.\n",
+    "\n",
+    "9. Officer Squad - imputed with \"Unknown\" to retain the rows\n",
+    "\n",
+    "**Enchoding Techniques**\n",
+    "\n",
+    "We used 'Target Encoding' to replace each feature that exhibited high cardinality with the mean of the target variable for that category. This reduced the dimensionality by not increasing the number of features, which can help in preventing overfitting. One hot encoding would not have been suitable for such features as they would have increased the number of features in our dataset by a significant magnitude.\n",
+    "\n",
+    "We used 'One Hot Encoding' for features in our dataset with low cardinality  One-hot encoding transforms categorical variables into a format that can be easily interpreted by our logistic regression model. Each category is represented by a binary feature (0 or 1), preserving the information contained in the categorical features.  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **d. Class Imbalance Management:**\n",
+    "\n",
+    "We used SMOTE to address the class imbalance in our target variable.\n",
+    "\n",
+    "Impact on our model performance:\n",
+    "\n",
+    "Addressing class imbalance using SMOTE (Synthetic Minority Over-sampling Technique) was important in our logistic regression modeling process due to the following reasons:\n",
+    "\n",
+    "**1. Improvement in Minority Class Recall:**\\\n",
+    "In the initial logistic regression model without addressing class imbalance, the recall for the True class (minority class) was relatively low (0.61), meaning that a significant portion of the actual True cases were being missed.\n",
+    "After applying SMOTE, the recall for the True class improved significantly (0.81), indicating that the model became much better at detecting the minority class instances (i.e., Arrests), which is a critical goal in our main objective\n",
+    "\n",
+    "**2. Balanced Performance Across Classes:**\\\n",
+    "Without addressing the imbalance, the logistic regression model performed extremely well on the majority class (False) but poorly on the minority class (True). This imbalance in performance was reflected in the F1-score and recall differences. Applying SMOTE balanced the dataset, allowing the logistic regression model to learn equally well from both classes. As a result, the F1-score for the True class improved, leading to a more balanced performance that reflects a model capable of handling both True and False outcomes more equitably.\n",
+    "\n",
+    "**3. Mitigation of Bias Towards Majority Class:**\\\n",
+    "Imbalanced datasets cause models to be biased towards predicting the majority class e.g., the baseline model's constant prediction of the majority class (No Arrests) resulted in low precision and F1-scores. SMOTE helped mitigate this bias by oversampling the minority class, providing the model with a more representative training set. This change encouraged our model to learn the features distinguishing Arrests and No Arrests more effectively resulting in the models overall predictive ability given identifying minority class instances (arrests) is crucial, as false negatives (missed True cases) can have significant real-world implications.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7. Recommendations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**1. Enhance Training and Protocols for Weapon-Related Stops**\n",
+    "\n",
+    "Given the strong positive correlation between the presence of a weapon (Weapon Type) and the likelihood of an arrest, SPD should emphasize comprehensive training for officers on handling stops involving weapons. This training can include creating specific modules addressing the handling of weapon-related encounters including simulations and scenario-based derived from the predictions of the model to prepare officers for real-world situations.\n",
+    "\n",
+    "Additionally, SPD should continuously monitor the outcomes of weapon-related stops  comparing them to the outcomes predicted by the model.\n",
+    "\n",
+    "**2. Evaluate and Optimize Squad Practices**\n",
+    "\n",
+    "SPD should analyze practices across different squads to identify successful strategies and areas for improvement.\n",
+    "This can be done in the following ways:\n",
+    "\n",
+    " - Conduct Performance Reviews: Analyze arrest data and performance metrics for each squad to identify best practices and discrepancies in arrest rates.\n",
+    " - Share Best Practices: Develop a best practices guide based on high-performing squads and distribute it across the department.\n",
+    " - Targeted Training: Provide additional training or support to squads with lower arrest rates to align their practices with successful strategies observed in other squads.\n",
+    "\n",
+    "3. Adjust Resource Allocation Based on Beats and Sectors\n",
+    "Recommendation: The analysis of Beat and Sector features indicates varying likelihoods of arrests across different areas. SPD should adjust resource allocation and patrol strategies based on these insights to optimize law enforcement effectiveness.\n",
+    "\n",
+    "Action Steps:\n",
+    "\n",
+    "Resource Reallocation: Adjust patrol patterns and allocate resources based on crime rates and arrest patterns observed in different beats and sectors.\n",
+    "Community Engagement: Increase community policing efforts in beats and sectors with higher arrest rates to build relationships and address underlying issues that may contribute to higher arrest rates.\n",
+    "Sector-Specific Strategies: Develop targeted strategies for sectors with lower arrest rates to understand if there are specific challenges or factors affecting law enforcement outcomes.\n",
+    "4. Review and Standardize Field Contact Procedures\n",
+    "Recommendation: The negative coefficient for Stop Resolution_Field Contact suggests that stops resulting in field contacts are less likely to lead to arrests. SPD should review and standardize procedures for field contacts to ensure consistency and proper documentation.\n",
+    "\n",
+    "Action Steps:\n",
+    "\n",
+    "Procedure Review: Assess the current procedures for field contacts and identify any gaps or inconsistencies in how these stops are resolved.\n",
+    "Standardization: Develop clear guidelines and protocols for handling field contacts to ensure that all officers follow consistent practices.\n",
+    "Documentation and Oversight: Implement a system for better documenting and reviewing field contacts to ensure that decisions are well-justified and in line with department policies.\n",
+    "5. Address Class Imbalance and Model Performance\n",
+    "Recommendation: The model's trade-off between precision and recall for predicting arrests indicates challenges with class imbalance. SPD should consider strategies to manage class imbalance in predictive models and ensure that decisions are not solely based on model predictions.\n",
+    "\n",
+    "Action Steps:\n",
+    "\n",
+    "Implement Decision-Making Frameworks: Use the model as one tool among many in decision-making processes. Combine model predictions with officer judgment and contextual information to make balanced decisions.\n",
+    "Continuous Model Improvement: Regularly update and refine the model to improve performance on predicting arrests. Consider exploring other advanced techniques for class imbalance management, such as different sampling methods or ensemble methods.\n",
+    "Evaluation and Feedback: Continuously evaluate the impact of the predictive model on real-world outcomes and gather feedback from officers to make necessary adjustments and improvements.\n",
+    "By implementing these recommendations, the Seattle Police Department can enhance its practices related to Terry Stops, improve operational efficiency, and ensure more equitable and effective law enforcement."
    ]
   }
  ],
